--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <nav>
+        <a href="/location.html">Location</a>
+    </nav>
     <h1>Susrita</h1>
     <p>I am a girl. I read in class 10.</p>
 </body>
