new ideas about music.

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>My Page</title>
 </head>
 
-<body>
-    <nav>
-        <a href="/location.html">Location</a>
-    </nav>
-    <h1>Susrita</h1>
-    <p>I am a girl. I read in class 10.</p>
+<body style="background-image: url(galaxy.jpg);">
+    <h1 style="color: pink;">Music World</h1>
+    <p style="color: rgb(125, 125, 201);">Hello everyone. This website is safe for everyone.</p>
+    <i class="fas fa-music" style="font-size: 60px;"></i>
+    <a href="location.html">click here for more information</a>
+
 </body>
 
 </html>
