--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>My Page</title>
 </head>
 
-<body style="background-image: url(galaxy.jpg);">
+<body style="background-image: url(sky.jpg);">
     <h1 style="color: pink;">Music World</h1>
     <p style="color: rgb(125, 125, 201);">Hello everyone. This website is safe for everyone.</p>
     <i class="fas fa-music" style="font-size: 60px;"></i>
